--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
+  },
+  "packageManager": "pnpm@10.5.2",
+  "engines": {
+    "node": ">=22.14.0"
   }
 }
