--- a/package.json
+++ b/package.json
@@ -45,5 +45,10 @@
   "packageManager": "pnpm@10.5.2",
   "engines": {
     "node": ">=22.0.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@tailwindcss/oxide"
+    ]
   }
 }
