feat: restructure routing to include MainLayout and improve user flow
feat: update sign-in logic to fetch user's farm and handle navigation

feat: enhance sign-up process with proper navigation after account creation

fix: adjust logo link behavior based on user authentication state

feat: implement WebSocket connection for real-time updates

feat: add MainLayout for better state restoration and layout management

feat: create core API setup with Axios for consistent API calls

feat: implement socket API for real-time notifications and updates

feat: add services for managing goals, products, sales, and notifications

feat: introduce utility function to remove empty search parameters

chore: add notification icon asset for better user experience

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@raulpesilva/re-state": "^1.2.32",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jose": "^6.1.0",
@@ -22,6 +23,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "use-sync-external-store": "^1.5.0"
@@ -43,7 +45,7 @@
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
   },
-  "packageManager": "pnpm@10.5.2",
+  "packageManager": "pnpm@10.17.1",
   "engines": {
     "node": ">=22.0.0"
   },
