--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "@tailwindcss/oxide"
+      "@tailwindcss/oxide",
+      "esbuild"
     ]
   }
 }
